--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+#mercadopago.token=TEST-1016222742358593-062310-6eaddcc1b5893e037fa1281c4a6abe16-683211147
 
+#Usen siempre este, el de arriba lo tengo que usar yo nomas cuando uso el checkout pro, porque MP me valida que este es mi token y sino no me deja, pero a ustedes no les deberia dar error
+mercadopago.token=TEST-7629534519570845-072515-b85ce1449267138aa659cbf2a59bf991-306891134
