agrego conf para conectar la bbdd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ mercadopago.key=TEST-0dc10bd0-9dde-40c2-9647-2cb6bfde8558
 public.token=4ae76f00234843d1af5994ed4674fd76
 private.token=3891f691dc4f40b6941a25a68d17c7f4
 decidir.url=https://developers.decidir.com/api/v2/
+
+spring.datasource.url=jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=medios_de_pago
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.default_schema=dbo
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
