--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ public.token=4ae76f00234843d1af5994ed4674fd76
 private.token=3891f691dc4f40b6941a25a68d17c7f4
 decidir.url=https://developers.decidir.com/api/v2/
 
-spring.datasource.url=jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=medios_de_pago
+spring.datasource.url=jdbc:sqlserver://DESKTOP-1C4E0IQ\\SQLEXPRESS;databaseName=medios_de_pago;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=12345678
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
@@ -18,3 +18,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
